--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,6 +1,6 @@
 {
   "store.home": {
-    "blocks": ["rich-text"]
+    "blocks": ["rich-text", "info-card#button-right", "info-card#button-left"]
   },
   "rich-text": {
     "props": {
