--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,6 +1,6 @@
 {
   "store.home": {
-    "blocks": ["rich-text"]
+    "blocks": ["rich-text", "info-card#button-right", "info-card#button-left"]
   },
   "rich-text": {
     "props": {
@@ -28,7 +28,7 @@
       "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
       "headline": "Shining Chrome",
       "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
-      "callToActionMode": "link",
+      "callToActionMode": "text",
       "callToActionText": "Go To Collection",
       "callToActionUrl": "/sale/d",
       "textAlignment": "center"
