--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,6 +1,10 @@
 {
   "store.home": {
-    "blocks": ["responsive-layout", "rich-text"]
+    "blocks": [
+      "responsive-layout.desktop",
+      "responsive-layout.mobile",
+      "rich-text"
+    ]
   },
 
   "responsive-layout.desktop#desktop": {
