--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,8 +1,8 @@
 {
   "store.home": {
     "blocks": [
-      "responsive-layout.desktop",
-      "responsive-layout.mobile",
+      "responsive-layout.desktop#desktop",
+      "responsive-layout.mobile#mobile",
       "rich-text"
     ]
   },
