--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -16,8 +16,10 @@
 
   "flex-layout.col#right": {
     "children": ["product-name", "product-price", "buy-button"],
-    "verticalAlign": "middle",
-    "preventVerticalStretch": true
+    "props": {
+      "verticalAlign": "middle",
+      "preventVerticalStretch": true
+    }
   },
 
   "product-images": {},
