--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,6 @@
 {
   "store.product": {
-    "children": ["flex-layout.row#main"]
+    "children": ["breadcrumb", "flex-layout.row#main"]
   },
 
   "flex-layout.row#main": {
@@ -15,7 +15,13 @@
   },
 
   "flex-layout.col#right": {
-    "children": ["product-name", "product-price", "buy-button"],
+    "children": [
+      "product-name",
+      "product-price",
+      "flex-layout.row#qty-sku",
+      "shipping-simulator",
+      "buy-button"
+    ],
     "props": {
       "verticalAlign": "middle",
       "preventVerticalStretch": true
@@ -31,6 +37,10 @@
       "showSavings": true,
       "showListPrice": true
     }
+  },
+
+  "flex-layout.row#qty-sku": {
+    "children": ["sku-selector", "product-quantity"]
   },
 
   "buy-button": {}
