--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,6 @@
 {
   "store.product": {
-    "children": ["breadcrumb", "flex-layout.row#main"]
+    "children": ["breadcrumb", "flex-layout.row#main", "shelf.relatedProducts"]
   },
 
   "flex-layout.row#main": {
@@ -11,7 +11,18 @@
   },
 
   "flex-layout.col#left": {
-    "children": ["product-images"]
+    "children": ["stack-layout#brand"]
+  },
+
+  "stack-layout#brand": {
+    "children": ["product-images", "product-brand"]
+  },
+
+  "product-brand": {
+    "props": {
+      "displayMode": "logo",
+      "height": 30
+    }
   },
 
   "flex-layout.col#right": {
@@ -42,6 +53,14 @@
 
   "flex-layout.row#qty-sku": {
     "children": ["sku-selector", "product-quantity"]
+  },
+
+  "sku-selector": {
+    "props": {
+      "initialSelection": "empty",
+      "ShowValueForVariation": "all",
+      "showVariationsErrorMessage": true
+    }
   },
 
   "buy-button": {}
