--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -58,7 +58,8 @@
   "sku-selector": {
     "props": {
       "initialSelection": "empty",
-      "showValueForVariation": "all",
+      "showVariationsLabels": true,
+      "showValueNameForImageVariation": true,
       "showVariationsErrorMessage": true
     }
   },
