--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -42,8 +42,8 @@
   },
   "tab-list.item#home2": {
     "props": {
-      "tabId": "electronics",
-      "label": "Electronics"
+      "tabId": "instagram",
+      "label": "Instagram"
     }
   },
   "tab-content#home": {
