--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,20 +1,21 @@
 {
   "store.home": {
     "blocks": [
+      "info-card#button-right",
+      "info-card#button-left",
+      "flex-layout.row",
+      "shelf",
+      "slider-layout#home",
       "responsive-layout.desktop#desktop",
-      "responsive-layout.mobile#mobile",
-      "rich-text"
+      "responsive-layout.mobile#mobile"
     ]
   },
-
   "responsive-layout.desktop#desktop": {
     "children": ["rich-text#desktop", "image#desktop"]
   },
-
   "responsive-layout.mobile#mobile": {
     "children": ["rich-text#mobile", "image#mobile"]
   },
-
   "rich-text#desktop": {
     "props": {
       "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection",
@@ -22,7 +23,6 @@
       "textAlignment": "CENTER"
     }
   },
-
   "rich-text#mobile": {
     "props": {
       "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
@@ -30,26 +30,24 @@
       "textAlignment": "CENTER"
     }
   },
-
   "image#desktop": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
+      "maxWidth": "100%",
       "link": {
         "url": "/small-appliances/coffee-makers"
       },
-      "alt": "Coffee Makers Collection",
-      "maxWidth": "100%"
+      "alt": "Coffee Makers Collection"
     }
   },
-
   "image#mobile": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
+      "maxWidth": "100%",
       "link": {
         "url": "/small-appliances/coffee-makers"
       },
-      "alt": "Coffee Makers Collection",
-      "maxWidth": "100%"
+      "alt": "Coffee Makers Collection"
     }
   }
 }
